@@ -8,7 +8,7 @@
 *********************************************************************/
 
 /*
- * $Id: OpenGL_Utils.c,v 1.118 2008/09/22 20:14:20 crc_canada Exp $
+ * $Id: OpenGL_Utils.c,v 1.119 2008/09/24 19:23:01 crc_canada Exp $
  *
  */
 #include "headers.h"
@@ -1050,6 +1050,8 @@ printf ("%lf\n",X3D_BILLBOARD(node)->bboxSize.c[1]);
 		farPlane = minDist;
 		nearPlane = geoHeightinZAxis - GEOSP_WE_A_LARGER;
 		if (nearPlane < DEFAULT_NEARPLANE) nearPlane = DEFAULT_NEARPLANE;
+
+#undef TEST_READ_NEAR_FAR
 
 		#ifdef TEST_READ_NEAR_FAR
 	
