@@ -1203,6 +1203,7 @@ void compile_GeoPositionInterpolator (struct X3D_GeoPositionInterpolator * this)
 void compile_GeoTouchSensor (struct X3D_GeoTouchSensor * this);
 void compile_GeoViewpoint (struct X3D_GeoViewpoint * this);
 void compile_GeoProximitySensor (struct X3D_GeoProximitySensor *this);
+void compile_GeoTransform (struct X3D_GeoTransform * node);
 void proximity_GeoProximitySensor (struct X3D_GeoProximitySensor *this);
 void prep_GeoTransform (struct X3D_GeoTransform *);
 void child_GeoTransform (struct X3D_GeoTransform *);
